--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,13 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="16dp"
         android:text="@string/submit"
+        android:onClick="submitData"
         android:background="@color/design_default_color_primary_dark"
         android:textColor="#ffffff"
 
         />
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
