--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="12dp"
-
-
+    android:padding="12dp"
     >
 
 
@@ -17,13 +15,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/deleteButton"
         app:layout_constraintTop_toTopOf="parent"
-        android:padding="12dp"
+        android:padding="16dp"
         android:textSize="16sp"
         tools:text="Devanshu"
         android:background="#4284C6"
         android:textColor="#212121"
-
-
         />
     <ImageView
         android:id="@+id/deleteButton"
